<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.AadhaarNumberActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/gray_background"
        android:padding="@dimen/_20sdp"
        android:id="@+id/rl">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:id="@+id/text"
            android:layout_alignParentStart="true"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            />
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_toEndOf="@id/text"
            android:src="@drawable/splash_bird"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:cardCornerRadius="@dimen/_30sdp"
            app:cardBackgroundColor="@color/white"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="Help"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    android:layout_gravity="center"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/rl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_aadhaar_no"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_18ssp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/issue"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#547387"
            android:layout_marginTop="@dimen/_4sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_11ssp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_receive"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:textSize="@dimen/_10ssp"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            />



            <EditText
                android:layout_width="wrap_content"
                android:hint="9999 6666 3333"
                android:inputType="number"
                android:backgroundTint="@color/white"
                android:textSize="26sp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLength="12"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray_background"
            />

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_powered_by_idfc"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/continue_btn"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/problem"
            android:gravity="center"
            android:textColor="#A9A9A9"
            android:textSize="@dimen/_13ssp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/con_kyc"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#547387"
            android:textSize="@dimen/_10ssp"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/continue_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">


            <ProgressBar
                android:id="@+id/button_progress"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/button_text"
                android:indeterminate="true"
                android:indeterminateTint="#ffffff"
                android:visibility="gone"
                android:indeterminateTintMode="src_atop"
                />

            <TextView
                android:id="@+id/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:gravity="center"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/white"
                android:text="Continue"
                android:textSize="15sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>